--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,9 +1,9 @@
-- name: Adobe Photoshop
+- name: Flute
   percentage: 95
   level: Expert
   color: info
 
-- name: Adobe Illustrator
-  percentage: 90
-  level: Expert
+- name: Skateboard
+  percentage: 20
+  level: Beginner
   color: success
