--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -3,7 +3,7 @@
   to: present
   description: MS Statistics - Analytics
 
-- title: University of Connecticut
+- title: University of Connecticut, Storrs
   from: 2018.8
   to: 2021.12
   description: BA Actuarial Science
